# bio-systems-engineering

./: .aiv.yml  .env.example  .gitignore  ACTION_PLAN.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  DAY_SUMMARY.md  DEVELOPMENT_ARCHIVE.md  Dockerfile  EXTRACTION_PLAN.md  FEEDBACK_RESPONSE.md  GITHUB_SETUP.md  INFRASTRUCTURE_FIX_COMPLETE.md  LICENSE  PRE_PUBLICATION_CHECKLIST.md  README.md  README_ADDITIONAL_FAILURES.md  README_FIX_COMPLETE.md  README_FOR_USER.md  REQUIREMENTS_AUDIT.md  STATUS.md  TESTING_REPORT.md  WORKING_CODE_SUMMARY.md  pyproject.toml  requirements.txt
.aiv/: change.json
.claude/: settings.local.json
.github/aiv-evidence/: EVIDENCE_.ENV.EXAMPLE.md  EVIDENCE_.GITHUB_AIV_PACKETS_PACKET_BIOSYSTEMS_F_GAP_ELE_ZERO_SEA_LEVEL_7_TESTS.MD.md  EVIDENCE_.GITHUB_WORKFLOWS_TEST.YML.md  EVIDENCE_.GITIGNORE.md  EVIDENCE_BIOSYSTEMS_ANALYTICS_HISTORY.md  EVIDENCE_BIOSYSTEMS_ANALYTICS_TRENDING.md  EVIDENCE_BIOSYSTEMS_CLI.md  EVIDENCE_BIOSYSTEMS_ENVIRONMENT_WEATHER.md  EVIDENCE_BIOSYSTEMS_INGESTION_FIT.md  EVIDENCE_BIOSYSTEMS_MODELS.md  (+39 more)
audit/: 01-understanding.json  01-understanding.md  02-candidates.json  02-static-audit.json  02-static-audit.md  03-execution.json  03-execution.md  04-goal.json  04-goal.md  05-plan.json  05-plan.md  forensic-audit.mjs
audits/: META_AUDIT_DEC_18.md  QUALITY_AUDIT.md
daily_running_brief/: README.md  daily_running_brief.py  requirements.txt
data/: real_weekly_data.json  zones_personal.yml
docs/: DATA_PREPARATION.md  PUBLICATION_CHECKLIST.md  WELLNESS.md
reports/: 01_longitudinal_study.md
scripts/: nightly_training_brief.py
tests/: __init__.py  test_cli_integration.py  test_environment.py  test_history.py  test_ingestion_fit.py  test_ingestion_gpx.py  test_models.py  test_physics_gap.bug-catalog.md  test_physics_gap.py  test_physics_metrics.py  test_readme_examples.py  test_sanitize_gps_fix.py  test_signal.py  test_strava.py  test_trending.py  test_walk_classification.py  test_walk_detection_fix.py  test_wellness_cache.py
tools/: generate_charts_real_only.py  generate_from_real_data.py  generate_readme_charts.py  generate_sample_data.py  ingest_new_runs.py  reproduce_study_analysis.py  sanitize_gps.py  strava_auth.py  verify_installation.py
(+204 files in other folders)
